Add Public Microsoft NuGet Feeds as settings constants
Fix issues in Download-BcNuGetPackageToFolder, where extensive amounts of NuGet searches was performed to locate packages
Download-BcNuGetPackageToFolder now returns an array of apps downloaded instead of True/False
JIT install PowerShell 7 in container when using BC version 24 or above (if not already installed in container)

6.0.5
Proof of concept support for hosting artifacts as Universal Packages
Add new function Get-BcNuGetPackageId to get a NuGet Package Id based on publisher, name, id and version
Issue 3301 Run-AlValidation fails running AppsourceCop "Could not load type 'System.Object' from assembly 'System.Private.CoreLib'
Give better error message if GitHub CLI, GIT or dotnet is not installed
Issue 3301 Run-AlValidation fails running AppsourceCop "Could not load type 'System.Object' from assembly 'System.Private.CoreLib' (Regression in 6.0.4) 
Issue 3313 Strange error in Copy-BcEnvironment
Issue 3318 Download-BcNuGetPackageToFolder fails when no dependencies defined
Add Stacktrace output to high level functions Download-BcNuGetPackageToFolder and Get-BcNuGetPackage
Fix for AL-Go issue 913 (https://github.com/microsoft/AL-Go/issues/913)
Issue 3322 Default country for nextminor and nextmajor should be w1, not whatever country was the last one generated
Encoding problems when using Invoke-ScriptInBcContainer with PowerShell 7.4.1

6.0.4
Rename AppInfoCache.json to cache_AppInfo.json (which by default is covered by .gitignore in AL-Go for GitHub)
Refactor NuGet feed functionality to use NuGetFeed class
Add trusted NuGet feeds to settings to allow searching for NuGet packages in all trusted feeds
Support searching for Earliest, Latest, Exact or Any NuGet package (default is Latest)
Reset startcount when using Restart-BcContainer
Issue 3277 Run-ALCops uses wrong CodeAnalysis dll path
Add support for useDevEndpoint in Run-AlPipeline when importing test toolkit