@@ -8,6 +8,7 @@ Add Public Microsoft NuGet Feeds as settings constants
 Fix issues in Download-BcNuGetPackageToFolder, where extensive amounts of NuGet searches was performed to locate packages
 Download-BcNuGetPackageToFolder now returns an array of apps downloaded instead of True/False
 JIT install PowerShell 7 in container when using BC version 24 or above (if not already installed in container)
+JIT install ASP.NET Core 1.1 when using BC 15 - 18 on Generic 1.0.2.15 or above
 
 6.0.5
 Proof of concept support for hosting artifacts as Universal Packages
